feat: implement floating search window
- Removes popup and adds floating window
- Adds keyboard shortcut to toggle search

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,6 @@
   <div id="grepfox-container">
     <div class="header">
       <h3>GrepFox Search</h3>
-      <button id="detach-btn" title="Open in detachable window">⚏</button>
     </div>
     
     <div class="search-section">
@@ -22,11 +21,6 @@
           <input type="checkbox" id="regex-checkbox">
           <span class="checkmark"></span>
           Perl Regex (-P)
-        </label>
-        <label class="checkbox-container">
-          <input type="checkbox" id="keep-open-checkbox">
-          <span class="checkmark"></span>
-          Keep Open
         </label>
       </div>
     </div>
@@ -51,6 +45,12 @@
             <li><kbd>Enter</kbd> - Next match</li>
             <li><kbd>Shift+Enter</kbd> - Previous match</li>
             <li><kbd>Ctrl+Shift+F</kbd> - Toggle search</li>
+          </ul>
+          <p><strong>Notes:</strong></p>
+          <ul>
+            <li>Click the extension icon to open floating search window</li>
+            <li>Floating window can be dragged and stays open on the page</li>
+            <li>All search functions work in both popup and floating modes</li>
           </ul>
           <p><strong>Regex Examples:</strong></p>
           <ul>
