feat: add case sensitive search option
Adds a case sensitive search option to both the popup and
content script, allowing users to perform case-sensitive
searches.

--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,11 @@
           <span class="checkmark"></span>
           Perl Regex (-P)
         </label>
+        <label class="checkbox-container">
+          <input type="checkbox" id="case-sensitive-checkbox">
+          <span class="checkmark"></span>
+          Case Sensitive
+        </label>
       </div>
     </div>
     
