--- a/grepl-chrome/popup-chrome.html
+++ b/grepl-chrome/popup-chrome.html
@@ -7,7 +7,7 @@
 <body>
   <div id="grepfox-container">
     <div class="header">
-      <h3>GrepFox Search</h3>
+      <h3>grepl Search</h3>
     </div>
     
     <div class="search-section">
@@ -68,7 +68,6 @@
     </div>
   </div>
   
-  <script src="browser-polyfill.js"></script>
-  <script src="popup.js"></script>
+  <script src="popup-chrome.js"></script>
 </body>
 </html>
