feat(ui): add icons, enable popup, and update branding

--- a/grepl-chrome/popup-chrome.html
+++ b/grepl-chrome/popup-chrome.html
@@ -7,7 +7,10 @@
 <body>
   <div id="grepfox-container">
     <div class="header">
-      <h3>grepl Search</h3>
+      <div class="header-content">
+        <img src="icon16.png" alt="Grepl Icon" class="header-icon">
+        <h3>Grepl Search</h3>
+      </div>
     </div>
     
     <div class="search-section">
