chore: update icon asset and simplify regex label
Switch 48x48 icon from SVG to PNG.
Remove "(-P)" from "Perl Regex" label in UI.
Apply minor whitespace and newline formatting.

--- a/grepl-firefox/popup.html
+++ b/grepl-firefox/popup.html
@@ -23,7 +23,7 @@
         <label class="checkbox-container">
           <input type="checkbox" id="regex-checkbox">
           <span class="checkmark"></span>
-          Perl Regex (-P)
+          Perl Regex
         </label>
         <label class="checkbox-container">
           <input type="checkbox" id="case-sensitive-checkbox">
